repo_zadanie2/k8s/04-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: zadanie2-ns
spec:
  ports:
  - port: 27017
  clusterIP: None
  selector:
    app: mongo-db
