repo_zadanie2/k8s/06-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mean-app-service
  namespace: zadanie2-ns
spec:
  type: ClusterIP
  selector:
    app: mean-app
  ports:
  - port: 80
    targetPort: 3000
