repo_zadanie2/k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mean-ingress
  namespace: zadanie2-ns
spec:
  rules:
  - host: brilliantapp.zad
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mean-app-service
            port:
              number: 80
